--- a/frontend/src/components/styles/health.css
+++ b/frontend/src/components/styles/health.css
@@ -16,16 +16,15 @@ body, html {
 .health-container::before {
     content: "";
     position: fixed;
-    top: -5%;
-    left: -5%;
-    width: 110%;
-    height: 110%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-image: url('/health-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     filter: blur(8px);
-    transform: scale(1.1);
     z-index: -1;
 }
 
